@@ -4,6 +4,7 @@ import com.example.quiz_service.enums.UserRoles;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
@@ -22,6 +23,7 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import java.util.Arrays;
 import java.util.List;
 
+
 @Configuration
 @EnableMethodSecurity
 @EnableWebSecurity
@@ -33,105 +35,48 @@ public class SecurityConfig {
     @Autowired
     private JwtAuthenticationFilter jwtAuthFilter;
 
-//    @Bean
-//    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-//
-//        return http
-//                .csrf(csrf -> csrf.disable())
-//                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-//                .authorizeHttpRequests(auth -> auth
-//
-//                        // CREATE QUIZ
-//                        .requestMatchers("/api/quiz")
-//                        .hasAnyAuthority(UserRoles.ADMIN.name(), UserRoles.CURATOR.name())
-//
-//                        // START QUIZ
-//                        .requestMatchers("/api/quiz/*/start")
-//                        .hasAnyAuthority(UserRoles.PARTICIPANT.name())
-//
-//                        // SUBMIT QUIZ
-//                        .requestMatchers("/api/quiz/submit")
-//                        .hasAnyAuthority(UserRoles.PARTICIPANT.name())
-//
-//                        // VIEW QUIZ
-//                        .requestMatchers("/api/quiz/**")
-//                        .authenticated()
-//
-//                        .anyRequest().authenticated()
-//                )
-//                .sessionManagement(manager ->
-//                        manager.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-//                .authenticationProvider(authenticationProvider())
-//                .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class)
-//                .build();
-//    }
-
-//    New light weight security filter chain implement
-//@Bean
-//public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-//
-//    return http
-//            .csrf(csrf -> csrf.disable())
-//            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-//            .authorizeHttpRequests(auth -> auth
-//
-//                    // Public
-//                    .requestMatchers("/api/questions/generate",
-//                            "/api/questions/fetch",
-//                            "/api/questions/category")
-//                    .permitAll()
-//
-//                    // Role based
-//                    .requestMatchers("/api/quiz")
-//                    .hasAnyAuthority("ADMIN", "CURATOR")
-//
-//                    .requestMatchers("/api/quiz/*/start",
-//                            "/api/quiz/submit")
-//                    .hasAuthority("PARTICIPANT")
-//
-//                    .anyRequest().authenticated()
-//            )
-//            .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class)
-//            .build();
-//}
-
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
 
         return http
                 .csrf(csrf -> csrf.disable())
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .sessionManagement(s ->s.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .cors(cors -> cors.disable())
+                .sessionManagement(s -> s.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
 
-                        // optional health
+                        // PREFLIGHT — must be first, allow always
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+
+                        // PUBLIC / FEIGN / INTERNAL
                         .requestMatchers("/actuator/**").permitAll()
                         .requestMatchers("/api/quiz/internal/**").permitAll()
+                        .requestMatchers("/api/leaderboard/**").permitAll()
                         .requestMatchers("/internal/users/sync").permitAll()
+
+                        // EVERYTHING ELSE — needs auth,
+                        // fine-grained control handled by @PreAuthorize/@PostAuthorize
                         .anyRequest().authenticated()
                 )
-                .sessionManagement(session ->
-                        session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class)
                 .build();
     }
 
-    @Bean
-    public UrlBasedCorsConfigurationSource corsConfigurationSource() {
-
-        CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOriginPatterns(Arrays.asList("http://localhost:4200", "http://localhost:8080"));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
-        config.setExposedHeaders(List.of("Authorization", "Content-Type"));
-        config.setAllowCredentials(false);
-        config.setMaxAge(3600L);
-
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/api/**", config);
-
-        return source;
-    }
+//    @Bean
+//    public UrlBasedCorsConfigurationSource corsConfigurationSource() {
+//
+//        CorsConfiguration config = new CorsConfiguration();
+//        config.setAllowedOriginPatterns(Arrays.asList("http://localhost:4200", "http://localhost:8080"));
+//        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+//        config.setAllowedHeaders(List.of("*"));
+//        config.setExposedHeaders(List.of("Authorization", "Content-Type"));
+//        config.setAllowCredentials(false);
+//        config.setMaxAge(3600L);
+//
+//        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+//        source.registerCorsConfiguration("/**", config);
+//
+//        return source;
+//    }
 
     @Bean
     public PasswordEncoder passwordEncoder() {
@@ -140,11 +85,9 @@ public class SecurityConfig {
 
     @Bean
     public AuthenticationProvider authenticationProvider() {
-
         DaoAuthenticationProvider provider = new DaoAuthenticationProvider();
         provider.setPasswordEncoder(passwordEncoder());
         provider.setUserDetailsService(userDetailService);
-
         return provider;
     }
 
